connected frontend with model

--- a/template/index.html
+++ b/template/index.html
@@ -205,7 +205,7 @@ Put any caption, description or anything here.<br><br>
 
 
 
-<section class="feat">
+<section class="feat" >
 <div class="row">
 <div class="col-sm-12">
 <h6 class="subhead theme"><strong>FEATURED ITEMS</strong></h6>
@@ -421,5 +421,6 @@ Put any caption, description or anything here.<br><br>
 <script type="text/javascript" src="js/973-js-bootstrap.min.js"></script>
 <script type="text/javascript" src="js/4298-js-shop.js"></script>
 <script type="text/javascript" src="js/7506-js-script.js"></script>
+<script type = "text/javascript" src="js/predictor.js"></script>
 </body>
 </html>
