initial predictor for bandits added

--- a/template/index.html
+++ b/template/index.html
@@ -583,5 +583,6 @@
     <script type="text/javascript" src="js/4298-js-shop.js"></script>
     <script type="text/javascript" src="js/7506-js-script.js"></script>
     <script type="text/javascript" src="js/predictor.js"></script>
+    <script type="text/javascript" src="js/bandits_predictor.js"></script>
   </body>
 </html>
