cors added and bandits integrated

--- a/template/index.html
+++ b/template/index.html
@@ -44,7 +44,14 @@
 
     <style type="text/css">
       /* Add Google Font name here */
-
+      .rectangle {
+  height: 150px;
+  width: 30%;
+  border:5px black;
+  color:black;
+  background-color:rgb(180, 178, 178);
+  /* align-items: center; */
+}
       .wf-active {
         font-family: "Lato", serif;
         font-size: 14px;
@@ -230,17 +237,23 @@
       <div class="clearfix"></div>
 
       <section class="home-panel promo">
-        <div class="container" style="display: block">
-          <div class="row">
-            <article class="col-sm-4">
-              <a href="#"><img src="images/banner-samplepromo.png" alt="" /></a>
-            </article>
-            <article class="col-sm-4">
-              <a href="#"><img src="images/banner-samplepromo.png" alt="" /></a>
-            </article>
-            <article class="col-sm-4">
-              <a href="#"><img src="images/banner-samplepromo.png" alt="" /></a>
-            </article>
+        <div class="container justify-content-md-center" style="display: block">
+          <div class="row ">
+            <div class="col-sm-4 rectangle" style="margin: 5px; border-width:10px;border-color: white;border-style:double;text-align: center">
+              <p style="margin-top:30px; margin: bottom 30px;" id="a">hello!</p>
+            </div>
+            <div class="col-sm-4 rectangle" style="margin: 5px; border-width:10px;border-color: white;border-style:double;text-align: center;">
+              <p style="margin-top:30px; margin: bottom 30px;" id="b">hello!</p>
+            </div>
+            <div class="col-sm-4 rectangle"style="margin: 5px; border-width:10px;border-color: white;border-style:double;text-align: center;">
+              <p style="margin-top:30px; margin: bottom 30px;" id="c">hello!</p>
+            </div>
+            <div class="col-sm-4 rectangle"style="margin: 5px; border-width:10px;border-color: white;border-style:double;text-align: center;">
+              <p style="margin-top:30px; margin: bottom 30px;" id="d">hello!</p>
+            </div>
+            <div class="col-sm-4 rectangle"style="margin: 5px; border-width:10px;border-color: white;border-style:double;text-align: center;">
+              <p style="margin-top:30px; margin: bottom 30px;" id="e">hello!</p>
+            </div>
           </div>
         </div>
       </section>
