--- a/template/index.html
+++ b/template/index.html
@@ -254,6 +254,9 @@
             <div class="col-sm-4 rectangle"style="margin: 5px; border-width:10px;border-color: white;border-style:double;text-align: center;">
               <p style="margin-top:30px; margin: bottom 30px;" id="e">hello!</p>
             </div>
+            <div class="col-sm-4 rectangle"style="margin: 5px; border-width:10px;border-color: white;border-style:double;text-align: center;">
+              <p style="margin-top:30px; margin: bottom 30px;" id="f">hello!</p>
+            </div>
           </div>
         </div>
       </section>
