bandit leanener added

--- a/template/index.html
+++ b/template/index.html
@@ -240,22 +240,22 @@
         <div class="container justify-content-md-center" style="display: block">
           <div class="row ">
             <div class="col-sm-4 rectangle" style="margin: 5px; border-width:10px;border-color: white;border-style:double;text-align: center">
-              <p style="margin-top:30px; margin: bottom 30px;" id="a">hello!</p>
+              <a style="margin-top:30px; margin: bottom 30px;" onclick="learner('a')" id="a">hello!</a>
             </div>
             <div class="col-sm-4 rectangle" style="margin: 5px; border-width:10px;border-color: white;border-style:double;text-align: center;">
-              <p style="margin-top:30px; margin: bottom 30px;" id="b">hello!</p>
+              <a style="margin-top:30px; margin: bottom 30px;" onclick="learner('b')" id="b">hello!</a>
             </div>
             <div class="col-sm-4 rectangle"style="margin: 5px; border-width:10px;border-color: white;border-style:double;text-align: center;">
-              <p style="margin-top:30px; margin: bottom 30px;" id="c">hello!</p>
+              <a style="margin-top:30px; margin: bottom 30px;" onclick="learner('c')" id="c">hello!</a>
             </div>
             <div class="col-sm-4 rectangle"style="margin: 5px; border-width:10px;border-color: white;border-style:double;text-align: center;">
-              <p style="margin-top:30px; margin: bottom 30px;" id="d">hello!</p>
+              <a style="margin-top:30px; margin: bottom 30px;" onclick="learner('d')" id="d">hello!</a>
             </div>
             <div class="col-sm-4 rectangle"style="margin: 5px; border-width:10px;border-color: white;border-style:double;text-align: center;">
-              <p style="margin-top:30px; margin: bottom 30px;" id="e">hello!</p>
+              <a style="margin-top:30px; margin: bottom 30px;" onclick="learner('e')" id="e">hello!</a>
             </div>
             <div class="col-sm-4 rectangle"style="margin: 5px; border-width:10px;border-color: white;border-style:double;text-align: center;">
-              <p style="margin-top:30px; margin: bottom 30px;" id="f">hello!</p>
+              <a style="margin-top:30px; margin: bottom 30px;" onclick="learner('f')" id="f">hello!</a>
             </div>
           </div>
         </div>
