--- a/template/index.html
+++ b/template/index.html
@@ -60,19 +60,14 @@
         font-family: "Bangers", serif;
       }
     </style>
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if IE 7]>
-      <link rel="stylesheet" href="css/ie7.css" />
-    <![endif]-->
+ 
   </head>
   <body class="wf-active">
     <div class="header-container">
       <div class="container welcome">
         <div class="row">
           <div class="pull-left greet">
-            Welcome shopper, <a href="login.html">login here</a>
+            Welcome shopper, <a href="#">login here</a>
           </div>
           <div class="pull-right cart tright">
             <div class="counter">
@@ -106,7 +101,7 @@
                 <hr />
                 <div class="clearfix">
                   <a href="javascript:void(0)" id="closeit">Close</a>
-                  <a href="checkout.html" class="btn theme btn-mini pull-right"
+                  <a href="#" class="btn theme btn-mini pull-right"
                     >Checkout</a
                   >
                 </div>
@@ -154,53 +149,53 @@
                     <ul class="nav">
                       <li><a href="index.html">Homepage Default</a></li>
                       <li>
-                        <a href="index-filterable.html">Homepage Filterable</a>
+                        <a href="#">Homepage Filterable</a>
                       </li>
                       <li>
-                        <a href="index-carousel.html">Slider with Carousel</a>
+                        <a href="#">Slider with Carousel</a>
                       </li>
-                      <li><a href="page.html">Full page</a></li>
+                      <li><a href="#">Full page</a></li>
                       <li>
-                        <a href="page-right-sidebar.html">Right sidebar</a>
+                        <a href="#">Right sidebar</a>
                       </li>
-                      <li><a href="page-left-sidebar.html">Left sidebar</a></li>
-                      <li><a href="login.html">Login Page</a></li>
-                      <li><a href="checkout.html">Checkout Page</a></li>
+                      <li><a href="#">Left sidebar</a></li>
+                      <li><a href="#">Login Page</a></li>
+                      <li><a href="#">Checkout Page</a></li>
                     </ul>
                   </li>
                   <li>
                     <a href="#">Product</a>
                     <ul class="nav">
                       <li>
-                        <a href="product-list.html">Products List Sortable</a>
+                        <a href="#">Products List Sortable</a>
                       </li>
                       <li>
-                        <a href="product-list-sidebar.html"
+                        <a href="#"
                           >Products list with sidebar</a
                         >
                       </li>
-                      <li><a href="product.html">Product page</a></li>
+                      <li><a href="#">Product page</a></li>
                     </ul>
                   </li>
-                  <li><a href="features.html">Features</a></li>
+                  <li><a href="#">Features</a></li>
                   <li>
                     <a href="#">Blog</a>
                     <ul class="nav">
                       <li>
-                        <a href="blog-right-sidebar.html">blog right sidebar</a>
+                        <a href="#">blog right sidebar</a>
                       </li>
                       <li>
-                        <a href="blog-left-sidebar.html">blog left sidebar</a>
+                        <a href="#">blog left sidebar</a>
                       </li>
                       <li>
-                        <a href="post-right-sidebar.html">post right sidebar</a>
+                        <a href="#">post right sidebar</a>
                       </li>
                       <li>
-                        <a href="post-left-sidebar.html">post left sidebar</a>
+                        <a href="#">post left sidebar</a>
                       </li>
                     </ul>
                   </li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li><a href="#">Contact</a></li>
                 </ul>
               </nav>
             </div>
@@ -297,14 +292,14 @@
                           <img src="images/products-4.gif" alt="" />
                         </div>
                         <div class="mask">
-                          <a href="product&amp;product_id=65.html"></a>
+                          <a href="#"></a>
                           <p>
                             Sample Product HumbleShopSample Product
                             HumbleShopSample Product HumbleShopSample Product
                             HumbleS..
                           </p>
-                          <a href="product.html" class="info">View</a>
-                          <a href="checkout.html" class="info">Buy</a>
+                          <a href="#" class="info">View</a>
+                          <a href="#" class="info">Buy</a>
                         </div>
                       </div>
                       <h2 class="price">
@@ -312,7 +307,7 @@
                         <span class="price-new">$39.60</span>
                       </h2>
                       <p>
-                        <a href="product.html">Sample Product Tendershop</a>
+                        <a href="#">Sample Product Tendershop</a>
                       </p>
                     </div>
                   </article>
@@ -323,14 +318,14 @@
                           <img src="images/products-4.gif" alt="" />
                         </div>
                         <div class="mask">
-                          <a href="product&amp;product_id=65.html"></a>
+                          <a href="#"></a>
                           <p>
                             Sample Product HumbleShopSample Product
                             HumbleShopSample Product HumbleShopSample Product
                             HumbleS..
                           </p>
-                          <a href="product.html" class="info">View</a>
-                          <a href="checkout.html" class="info">Buy</a>
+                          <a href="#" class="info">View</a>
+                          <a href="#" class="info">Buy</a>
                         </div>
                       </div>
                       <h2 class="price">
@@ -338,7 +333,7 @@
                         <span class="price-new">$39.60</span>
                       </h2>
                       <p>
-                        <a href="product.html">Sample Product Tendershop</a>
+                        <a href="#">Sample Product Tendershop</a>
                       </p>
                     </div>
                   </article>
@@ -349,14 +344,14 @@
                           <img src="images/products-4.gif" alt="" />
                         </div>
                         <div class="mask">
-                          <a href="product&amp;product_id=65.html"></a>
+                          <a href="#"></a>
                           <p>
                             Sample Product HumbleShopSample Product
                             HumbleShopSample Product HumbleShopSample Product
                             HumbleS..
                           </p>
-                          <a href="product.html" class="info">View</a>
-                          <a href="checkout.html" class="info">Buy</a>
+                          <a href="#" class="info">View</a>
+                          <a href="#" class="info">Buy</a>
                         </div>
                       </div>
                       <h2 class="price">
@@ -364,7 +359,7 @@
                         <span class="price-new">$39.60</span>
                       </h2>
                       <p>
-                        <a href="product.html">Sample Product Tendershop</a>
+                        <a href="#">Sample Product Tendershop</a>
                       </p>
                     </div>
                   </article>
@@ -375,14 +370,14 @@
                           <img src="images/products-4.gif" alt="" />
                         </div>
                         <div class="mask">
-                          <a href="product&amp;product_id=65.html"></a>
+                          <a href="#"></a>
                           <p>
                             Sample Product HumbleShopSample Product
                             HumbleShopSample Product HumbleShopSample Product
                             HumbleS..
                           </p>
-                          <a href="product.html" class="info">View</a>
-                          <a href="checkout.html" class="info">Buy</a>
+                          <a href="#" class="info">View</a>
+                          <a href="#" class="info">Buy</a>
                         </div>
                       </div>
                       <h2 class="price">
@@ -390,7 +385,7 @@
                         <span class="price-new">$39.60</span>
                       </h2>
                       <p>
-                        <a href="product.html">Sample Product Tendershop</a>
+                        <a href="#">Sample Product Tendershop</a>
                       </p>
                     </div>
                   </article>
@@ -401,14 +396,14 @@
                           <img src="images/products-4.gif" alt="" />
                         </div>
                         <div class="mask">
-                          <a href="product&amp;product_id=65.html"></a>
+                          <a href="#"></a>
                           <p>
                             Sample Product HumbleShopSample Product
                             HumbleShopSample Product HumbleShopSample Product
                             HumbleS..
                           </p>
-                          <a href="product.html" class="info">View</a>
-                          <a href="checkout.html" class="info">Buy</a>
+                          <a href="#" class="info">View</a>
+                          <a href="#" class="info">Buy</a>
                         </div>
                       </div>
                       <h2 class="price">
@@ -416,7 +411,7 @@
                         <span class="price-new">$39.60</span>
                       </h2>
                       <p>
-                        <a href="product.html">Sample Product Tendershop</a>
+                        <a href="#">Sample Product Tendershop</a>
                       </p>
                     </div>
                   </article>
@@ -427,14 +422,14 @@
                           <img src="images/products-4.gif" alt="" />
                         </div>
                         <div class="mask">
-                          <a href="product&amp;product_id=65.html"></a>
+                          <a href="#"></a>
                           <p>
                             Sample Product HumbleShopSample Product
                             HumbleShopSample Product HumbleShopSample Product
                             HumbleS..
                           </p>
-                          <a href="product.html" class="info">View</a>
-                          <a href="checkout.html" class="info">Buy</a>
+                          <a href="#" class="info">View</a>
+                          <a href="#" class="info">Buy</a>
                         </div>
                       </div>
                       <h2 class="price">
@@ -442,7 +437,7 @@
                         <span class="price-new">$39.60</span>
                       </h2>
                       <p>
-                        <a href="product.html">Sample Product Tendershop</a>
+                        <a href="#">Sample Product Tendershop</a>
                       </p>
                     </div>
                   </article>
@@ -488,15 +483,15 @@
             <strong>Latest Post</strong>
             <ul>
               <li>
-                <a href="post-right-sidebar.html">Big things are on the way</a
+                <a href="#">Big things are on the way</a
                 ><br /><small>posted on April 24, 2012</small>
               </li>
               <li>
-                <a href="post-right-sidebar.html">Product Image Galleries</a
+                <a href="#">Product Image Galleries</a
                 ><br /><small>posted on June 13, 2012</small>
               </li>
               <li>
-                <a href="post-right-sidebar.html"
+                <a href="#"
                   >So many options Reign is feature-packed</a
                 ><br /><small>posted on May 9, 2012</small>
               </li>
